// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MySqlQueryBuilder > getMany > should execute query and hydrate results 1`] = `
[
  target {
    "age": 25,
    "email": null,
    "id": "1",
    "name": "Alice",
  },
  target {
    "age": 30,
    "email": null,
    "id": "2",
    "name": "Bob",
  },
]
`;

exports[`MySqlQueryBuilder > getOne > should return single entity 1`] = `
target {
  "age": 25,
  "email": null,
  "id": "1",
  "name": "Alice",
}
`;

exports[`MySqlQueryBuilder > getRawRows > should return raw query results without hydration 1`] = `
[
  {
    "t0_age": 25,
    "t0_email_address": "alice@test.com",
    "t0_id": "1",
    "t0_name": "Alice",
  },
]
`;

exports[`MySqlQueryBuilder > set operations > except should compile EXCEPT set operation 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "appendOnly": false,
        "cache": null,
        "checks": [],
        "defaultOrder": null,
        "embeddedLists": [],
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "extras": [],
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "hooks": [],
        "indexes": [],
        "inheritance": null,
        "primaryKeys": [
          "id",
        ],
        "relationCounts": [],
        "relationIds": [],
        "relations": [],
        "schemas": [],
        "scopeKeys": [],
        "target": [Function],
        "uniques": [],
        "versionKeys": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    "Alice",
    18,
  ],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`name\` = ? EXCEPT SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`age\` < ?",
}
`;

exports[`MySqlQueryBuilder > set operations > intersect should compile INTERSECT set operation 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "appendOnly": false,
        "cache": null,
        "checks": [],
        "defaultOrder": null,
        "embeddedLists": [],
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "extras": [],
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "hooks": [],
        "indexes": [],
        "inheritance": null,
        "primaryKeys": [
          "id",
        ],
        "relationCounts": [],
        "relationIds": [],
        "relations": [],
        "schemas": [],
        "scopeKeys": [],
        "target": [Function],
        "uniques": [],
        "versionKeys": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    "Alice",
    20,
  ],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`name\` = ? INTERSECT SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`age\` > ?",
}
`;

exports[`MySqlQueryBuilder > set operations > union should compile set operation 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "appendOnly": false,
        "cache": null,
        "checks": [],
        "defaultOrder": null,
        "embeddedLists": [],
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "extras": [],
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "hooks": [],
        "indexes": [],
        "inheritance": null,
        "primaryKeys": [
          "id",
        ],
        "relationCounts": [],
        "relationIds": [],
        "relations": [],
        "schemas": [],
        "scopeKeys": [],
        "target": [Function],
        "uniques": [],
        "versionKeys": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    "Alice",
    "Bob",
  ],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`name\` = ? UNION SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`name\` = ?",
}
`;

exports[`MySqlQueryBuilder > toSQL > should return compiled query 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "appendOnly": false,
        "cache": null,
        "checks": [],
        "defaultOrder": null,
        "embeddedLists": [],
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "extras": [],
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "hooks": [],
        "indexes": [],
        "inheritance": null,
        "primaryKeys": [
          "id",
        ],
        "relationCounts": [],
        "relationIds": [],
        "relations": [],
        "schemas": [],
        "scopeKeys": [],
        "target": [Function],
        "uniques": [],
        "versionKeys": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    "Alice",
  ],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`name\` = ?",
}
`;

exports[`MySqlQueryBuilder > whereInQuery / whereNotInQuery > whereInQuery should compile IN (subquery) 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "appendOnly": false,
        "cache": null,
        "checks": [],
        "defaultOrder": null,
        "embeddedLists": [],
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "extras": [],
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "hooks": [],
        "indexes": [],
        "inheritance": null,
        "primaryKeys": [
          "id",
        ],
        "relationCounts": [],
        "relationIds": [],
        "relations": [],
        "schemas": [],
        "scopeKeys": [],
        "target": [Function],
        "uniques": [],
        "versionKeys": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    "abc",
  ],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`id\` IN (SELECT \`t0\`.\`user_id\` AS \`t0_userId\` FROM \`app\`.\`posts\` AS \`t0\` WHERE \`t0\`.\`user_id\` = ?)",
}
`;

exports[`MySqlQueryBuilder > whereInQuery / whereNotInQuery > whereNotInQuery should compile NOT IN (subquery) 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "appendOnly": false,
        "cache": null,
        "checks": [],
        "defaultOrder": null,
        "embeddedLists": [],
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "extras": [],
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "hooks": [],
        "indexes": [],
        "inheritance": null,
        "primaryKeys": [
          "id",
        ],
        "relationCounts": [],
        "relationIds": [],
        "relations": [],
        "schemas": [],
        "scopeKeys": [],
        "target": [Function],
        "uniques": [],
        "versionKeys": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    "abc",
  ],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`id\` NOT IN (SELECT \`t0\`.\`user_id\` AS \`t0_userId\` FROM \`app\`.\`posts\` AS \`t0\` WHERE \`t0\`.\`user_id\` = ?)",
}
`;
